[build-system]
requires = ["setuptools>=61.2.0", "setuptools_scm[toml]>=3.4.3"]
build-backend = "setuptools.build_meta"

[project]
name = "CPP2DLRTrace"
readme = "ReadMe.md"
description = "Just generates a config for DLRTrace from header files."
authors = [{name = "KOLANICH"}]
classifiers = [
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3 :: Only",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["c++", "DRLTrace"]
license = {text = "Unlicense"}
requires-python = ">=3.4"
dynamic = ["version"]
dependencies = ["pycparser"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-tools/CPP2DLRTrace.py"

[tool.setuptools]
zip-safe = true

[tool.setuptools.packages.find]
include = ["CPP2DLRTrace", "CPP2DLRTrace.*"]

[tool.setuptools_scm]
