[metadata]
name = CPP2DLRTrace
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/CPP2DLRTrace.py
description = Just generates a config for DLRTrace from header files.
long_description = file: ReadMe.md
keywords = c++, DRLTrace
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
packages = find:
include_package_data = True
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3
install_requires = pycparser

[options.packages.find]
include =
	CPP2DLRTrace
	CPP2DLRTrace.*
